# simple-global-logging

./: .gitignore  MANIFEST.in  README.md  conftest_template.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md
.github/workflows/: build-and-verify.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
examples/: __init__.py  basic_usage.py  custom_filename_example.py  stdout_capture_example.py  submodule.py  timezone_example.py
scripts/: check_version.py  sync_versions.py  test_prerelease_versions.py
simple_global_logging/: __init__.py  core.py
tests/: conftest.py  test_simple_global_logging.py
